fix projects loader alignment

--- a/src/shared/layouts/SidenavLayout/components/SidenavContent/components/Projects/Projects.module.scss
+++ b/src/shared/layouts/SidenavLayout/components/SidenavContent/components/Projects/Projects.module.scss
@@ -5,6 +5,7 @@
 
 .loader {
   margin: 1rem auto 0;
+  display: block;
 }
 
 .createCommonButtonWrapper {
